--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,4 +5,5 @@ html(lang='utf-8')
 		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
 	link(rel='stylesheet', href='/stylesheets/style.css')
 	link(rel='stylesheet', href='/stylesheets/skeleton.css')
+	link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 	body!= body
