--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,20 @@
 !!! 5
 html(lang='utf-8')
-	head
-		title= "Realtime Feedbacks"
-		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
-	link(rel='stylesheet', href='/stylesheets/style.css')
-	link(rel='stylesheet', href='/stylesheets/skeleton.css')
-	link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
-	body!= body
+  head
+    title= "Realtime Feedbacks"
+    meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/skeleton.css')
+    link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
+  body!= body
+    script(type='text/javascript')
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-24039251-1']);
+      _gaq.push(['_trackPageview']);
+      if(document.domain !== 'localhost'){
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      }
