--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -328,6 +328,9 @@ ul.emotionCnt{
   -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .2);
   box-shadow: 0 0 3px rgba(0, 0, 0, .2);
 }
+ul.emotionCnt li.first-child{
+  width:75px;
+}
 ul.emotionCnt li.last-child{
   border-right:none;
   margin-right:0;
