window focus on event time change from 10000 to 1 ms

--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -156,7 +156,7 @@ script(type='text/javascript')
     },
     
     windowFocusEvent = function(){
-      postMessage(currentEmotion());
+      postMessage(currentEmotion(),1);
       $(this).unbind('focus');
     },
     
