--- a/views/list.jade
+++ b/views/list.jade
@@ -6,7 +6,7 @@ div.container.center
       - each p in result
         - var link = '/p/' + p._id
         li
-          a(href=link)  #{p.speaker}: #{p.title}
+          a(href=link)  #{p.body} | #{p.speaker} | #{p.title}
   div.footer
     small made by 
       a(href='http://springsprout.org' , target="_blank") springsprout
