--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 div.container.center.index
   div.header
-    h1='The 2011 Java Developers Conference'
+    h1='The Seoul Data Engineering Camp 2011'
   div.article
     form(method='post', action='/login')
       h4.subheader='What\'s your name?'
