--- a/views/p-mgt.jade
+++ b/views/p-mgt.jade
@@ -10,6 +10,9 @@ div.container.center
 			label speaker
 				- var speaker = p.speaker
 				input(type='text',name='speaker',value=speaker)
+			label conference
+				- var conference = p.conference
+				input(type='text',name='conference',value=conference)
 			label body
 				- var body = p.body
 				input(type='text',name='body',value=body)
