--- a/views/list-mgt.jade
+++ b/views/list-mgt.jade
@@ -7,6 +7,8 @@ div.container.center
 				input(type='text',name='title')
 			label speaker
 				input(type='text',name='speaker')
+			label conference
+				input(type='text',name='conference')
 			label body
 				input(type='text',name='body')
 			input(type='submit', value='Add!')
