--- a/views/list.jade
+++ b/views/list.jade
@@ -10,6 +10,9 @@ div.container.center
   div.footer
     small made by 
       a(href='http://springsprout.org' , target="_blank") springsprout
+      &nbsp;&nbsp;
+      a(href='/logout', class="logout")
+        b logout
 script(src='/javascripts/jquery-1.6.1.min.js')
 script(type='text/javascript')
   $(function(){
