twitter login is working on

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,4 +15,4 @@ div.container.center.index
   div#fb-root
 script(src='/javascripts/jquery-1.6.1.min.js')
 script(src='http://connect.facebook.net/en_US/all.js')
-script(src='/javascripts/fb.js')
+script(src='/javascripts/third-party.js')
