Logout link added in presentation page.

--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -356,3 +356,6 @@ div.container.presentation
   div.footer
     small made by 
       a(href='http://springsprout.org' , target="_blank") springsprout
+      &nbsp;&nbsp;
+      a(href='/logout', class="logout")
+        b logout
