--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 div.container.center.index
   div.header
-    h1='The Seoul Data Engineering Camp 2011'
+    h1='Welcome to the Live.log'
   div.article
     a#fbLogin(href='#')
       img(src='/images/sign-in-fb.png')
