--- a/views/list-mgt.jade
+++ b/views/list-mgt.jade
@@ -1,6 +1,6 @@
 div.container.center
 	div.header
-		h1='The SDEC 2011\'s Schedules'
+		h1='Be Careful!!'
 	div.form
 		form(method='post', action='/list/add')
 			label title
