#16 added buttons to the top of the page & remove console.log

--- a/views/list.jade
+++ b/views/list.jade
@@ -1,5 +1,8 @@
 div.container.center
   div.header
+    button(id='prev_list') prev();
+    button(id='curr_list') current();
+    button(id='next_list') next();
     h1 The 
        | #{confTitle}
        | '\s Schedules
