--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang='utf-8')
   head
-    title= "Realtime Feedbacks"
+    title= "Live.log"
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/skeleton.css')
